objects/Dealer_Participation__c.object
<CustomObject>
    <fields>
        <fullName>Active_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not used</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_System__c</fullName>
        <label>CRM System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Division__c</field>
                <operation>equals</operation>
                <valueField>CRM_System__c.Division_CD__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_System__c</referenceTo>
        <relationshipLabel>Dealer Participations</relationshipLabel>
        <relationshipName>Dealer_Participations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CertificateName_NM__c</fullName>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificateStatus_TXT__c</fullName>
        <label>Certification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CertificationDate_DT__c</fullName>
        <label>Certification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DealerAccount_ID__c</fullName>
        <label>Dealer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Participations</relationshipLabel>
        <relationshipName>Dealer_Participations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dealer_Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Subdivision</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.DealerAccount_ID__c</field>
                <operation>equals</operation>
                <valueField>Dealer_Division__c.Dealer_ID__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Division__c</field>
                <operation>equals</operation>
                <valueField>Dealer_Division__c.Division_CD__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Dealer_Division__c</referenceTo>
        <relationshipLabel>Dealer Participations</relationshipLabel>
        <relationshipName>Dealer_Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISActive_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>(LeadReceivingStartDate_DT__c  &lt;=  NOW() &amp;&amp;  LeadReceivingEndDate_DT__c  &gt;  NOW() ) || (LeadReceivingStartDate_DT__c  &lt;=  NOW() &amp;&amp;  ISBLANK(LeadReceivingEndDate_DT__c ) ) || (ISBLANK(LeadReceivingStartDate_DT__c ) &amp;&amp; LeadReceivingEndDate_DT__c  &gt;  NOW() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Launchbox_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadReceivingEndDate_DT__c</fullName>
        <label>Lead Receiving End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadReceivingStartDate_DT__c</fullName>
        <label>Lead Receiving Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Dealer Participation</label>
    <nameField>
        <label>Dealer Participation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Participations</pluralLabel>
    <recordTypes>
        <fullName>Dealer_Participation</fullName>
        <active>true</active>
        <label>Dealer Participation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>